<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_strategies">

    <fragment
        android:id="@+id/navigation_strategies"
        android:name="org.gusev.nikita.bettingstrategies.ui.strategies.StrategiesFragment"
        android:label="@string/title_strategies"
        tools:layout="@layout/fragment_strategies" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="org.gusev.nikita.bettingstrategies.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_strategy_details"
        android:name="org.gusev.nikita.bettingstrategies.ui.strategydetails.StrategyDetailsFragment"
        android:label="@string/title_strategy_details"
        tools:layout="@layout/fragment_strategy_details" />
</navigation>