<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="strategyItem"
            type="org.gusev.nikita.bettingstrategies.model.Strategy" />

        <import type="kotlin.jvm.functions.Function3" />

        <import type="kotlin.jvm.functions.Function1" />

        <import type="kotlin.Unit" />
        <import type="android.view.View"/>

        <import type="org.gusev.nikita.bettingstrategies.model.Strategy" />

        <variable
            name="onFavoriteChecked"
            type="Function3&lt;Strategy, Boolean, View, Unit>" />

        <variable
            name="onDetailsClick"
            type="Function1&lt;Strategy, Unit>" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_strategy_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_strategy_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/item_strategy_image_description"
                android:scaleType="centerCrop"
                app:imageResource="@{strategyItem.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/item_strategy_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_strategy_start_margin"
                android:layout_marginTop="@dimen/item_strategy_top_margin"
                android:layout_marginEnd="@dimen/item_strategy_end_margin"
                android:text="@{strategyItem.title}"
                app:layout_constraintEnd_toStartOf="@+id/item_strategy_favorite_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_strategy_image"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/item_strategy_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_strategy_start_margin"
                android:layout_marginTop="@dimen/item_strategy_top_margin"
                android:layout_marginEnd="@dimen/item_strategy_end_margin"
                android:maxLines="2"
                android:text="@{strategyItem.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_strategy_title"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/item_strategy_details_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_strategy_start_margin"
                android:layout_marginTop="@dimen/item_strategy_top_margin"
                android:layout_marginEnd="@dimen/item_strategy_end_margin"
                android:layout_marginBottom="@dimen/item_strategy_bot_margin"
                android:onClick="@{(view) -> onDetailsClick.invoke(strategyItem)}"
                android:text="@string/item_strategy_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_strategy_description" />

            <ToggleButton
                android:id="@+id/item_strategy_favorite_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/item_strategy_end_margin"
                android:background="@drawable/button_toggle_favorite"
                android:checked="@{strategyItem.isFavorite}"
                android:contentDescription="@string/item_strategy_favorite_button_description"
                android:onCheckedChanged="@{(view, bool) -> onFavoriteChecked.invoke(strategyItem, bool, view)}"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/item_strategy_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_strategy_title"
                app:layout_constraintTop_toTopOf="@+id/item_strategy_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>